# servery

./: .env  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  servery.toml
.github/workflows/: push.yml
assets/: fabric.toml
migrations/: 1_servery.sql
src/: api.rs  main.rs  server.rs
src/db/: mod.rs  server.rs
