[package]
name = "servery"
version = "0.1.0"
authors = ["F0X <f0xde@protonmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0.38"
thiserror = "1.0.23"
async-trait = "0.1.42"
tokio = { version = "1.2.0", features = ["full"] }
tokio-stream = "0.1.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
toml = "0.5.8"
mongodb = "2.0.0-alpha"
bson = "1.2.0"
url = { version = "2.2.0", features = ["serde"] }
warp = "0.3.0"
bollard = "0.9.1"
