[package]
name = "servery"
version = "0.1.0"
authors = ["F0X <f0xde@protonmail.com>"]
edition = "2018"
description = "Dynamic Minecraft server manager using docker containers"
readme = "README.md"
repository = "https://github.com/challengemc/servery"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15.0"
async-trait = "0.1.42"
tokio = { version = "1.3", features = ["full"] }
tokio-stream = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
# 2.0 required for tokio 1.x
mongodb = "2.0.0-alpha"
bson = "1.2.0"
url = { version = "2.2", features = ["serde"] }
warp = "0.3.0"
bollard = "0.10.1"
